# snakemake-interface-common

./: CHANGELOG.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: release-please.yml  test.yml
snakemake_interface_common/: _common.py  exceptions.py  rules.py  settings.py  utils.py
snakemake_interface_common/plugin_registry/: __init__.py  plugin.py  tests.py
src/snakemake_interface_common/: __init__.py  exceptions.py  io.py  logging.py  rules.py  settings.py  utils.py
src/snakemake_interface_common/plugin_registry/: __init__.py  plugin.py
tests/: __init__.py  example_plugin.py  test_main.py  test_registry.py  test_snakemake_dependent.py  tests.py
tests/plugins/invalid-class/snakemake_example_plugin_invalid_class/: __init__.py
tests/plugins/invalid-object/snakemake_example_plugin_invalid_object/: __init__.py
tests/plugins/missing-attr/snakemake_example_plugin_missing_attr/: __init__.py
tests/plugins/valid/snakemake_example_plugin_valid_1/: __init__.py
tests/plugins/valid/snakemake_example_plugin_valid_2/: __init__.py
