[project]
name = "snakemake-interface-common"
version = "1.17.4"
description = "Common functions and classes for Snakemake and its plugins"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["argparse-dataclass>=2.0.0", "ConfigArgParse>=1.7"]

[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 50

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
snakemake-interface-common = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
mypy = ">=1.15.0,<2"

[tool.ruff]
lint.ignore = ["E721"]

[tool.mypy]
ignore_missing_imports = true

[tool.pixi.feature.dev.tasks]
format = "ruff format snakemake_interface_common"
lint = "ruff check"
type-check = "mypy snakemake_interface_common/"
