[project]
name = "snakemake-interface-common"
version = "1.17.4"
description = "Common functions and classes for Snakemake and its plugins"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["argparse-dataclass>=2.0.0", "ConfigArgParse>=1.7"]

[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[tool.coverage.run]
omit = [".pixi/*", "**/tests.py"]
source = ["snakemake_interface_common"]

[tool.coverage.report]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
snakemake_interface_common = ["py.typed"]

[dependency-groups]
dev = ["connection-pool>=0.0.3,<0.0.4"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
snakemake-interface-common = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
mypy = ">=1.15.0,<2"
pytest-cov = ">=6.0.0,<7"

[tool.ruff]
lint.ignore = ["E721"]

[tool.mypy]
ignore_missing_imports = true

[tool.pixi.feature.dev.tasks.test]
cmd = [
  "pytest",
  "--cov=snakemake_interface_common",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-report=term-missing",
  "tests/tests.py"
]
description = "Run tests and generate coverage report"

[tool.pixi.feature.dev.tasks]
format = "ruff format src"
lint = "ruff check"
type-check = "mypy src/"
qc = { depends-on = ["format", "lint", "type-check"] }
